# inka

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  dependabot.yml
examples/: sections.rs
src/: base.rs  find.rs  header.rs  hook.rs  lib.rs  program.rs  section.rs  symbol.rs
src/program/: linux.rs  mod.rs  windows.rs
src/program_old/: mod.rs
