[package]
name = "inka"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.155"