[package]
name = "inka"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["KiraCoding"]
license = "MIT OR Apache-2.0"
categories = ["os", "os::windows-apis"]
keywords = ["gamehacking"]
description = "todo"

[dependencies]
rayon = "1.10.0"

[target.'cfg(windows)'.dependencies.pelite]
version = "0.10.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]
